# fairness-drift-llms

./: .env.example  .gitattributes  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
docs/: DATASETS.md  PIPELINE.md
examples/: requirements-dev.txt
examples/docs/: METRICS.md  REPRODUCIBILITY.md
examples/latex/: acl_latex.aux  acl_latex.bbl  acl_latex.blg  acl_latex.fdb_latexmk  acl_latex.fls  acl_latex.out  acl_latex.tex  custom.bib
examples/results/: ablation_comparison.csv  ablation_summary.txt  advanced_fairness_metrics.csv  dataset_model_metric_drift.csv  drift_by_benchmark.csv  filtering_rate_by_benchmark.csv  filtering_rate_by_model.csv  model_version_detailed_metrics.csv  model_version_summary.csv  pairwise_statistical_tests.csv  summary_statistics.csv
examples/scripts/: ablation_analysis.py  generate_paper_figures.py
examples/tests/: test_pipeline_core.py
notebooks/: qualitative_analysis.ipynb
scripts/: generate_paper_figures.py  make_paper_plots.py  validate_repo.py
src/: __init__.py  config.py  data_loader.py  fairness_metrics.py  metrics.py  model_interface.py  visualization.py
src/pipeline/: __init__.py  execution.py  filtering.py  io.py  reporting.py  scoring.py
tests/: conftest.py  test_pipeline_core.py
